[package]
name = "UStream"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.24"
winapi = { version = "0.3.9", features = ["windef"] }
scrap = "0.5.0" 
core-graphics = { version = "0.22", optional = true }
tokio = { version = "1.33", features = ["full"] }
thiserror = "1.0"
bytes = "1.4" 
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"